--- a/app/assets/stylesheets/events.css.erb
+++ b/app/assets/stylesheets/events.css.erb
@@ -2,82 +2,29 @@
 
 .event-request { margin-top:15px }
 
-/*GPS Performance Borki 2014*/
-
-.clouds-bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: url(<%= asset_path('background.jpg') %>) no-repeat center center;
-  background-size: cover !important;
-  background-attachment: fixed !important;
-  background-color: #fff;
-  z-index: -100;
+.template-row {
+  display: none;
 }
 
-.bws-logo {
-  opacity: 0.7;
-  position: fixed;
-  margin-right: -100;
-  height: 100%;
-  width: 100%;
-  background: url(<%= asset_path('bws-cut.png') %>) no-repeat bottom right fixed;
-  -o-background-size: auto 70%;
-  -webkit-background-size: auto 70%;
-  -moz-background-size: auto 70%;
-  background-size: auto 70%;
-  z-index: -50;
+.edit-competitor {
+  margin-left: 10px;
+}
+.delete-competitor {
+  margin-left: 5px;
 }
 
-.jumbotron-event {
-  width: 600px;
-  height: 400px;
+td .edit-competitor {
+  visibility: hidden;
 }
 
-.event-bg {
-  opacity: 0.6;
-  position: absolute;
-  background: url(<%= asset_path('event-bg.png') %>) no-repeat;
-  background-size: contain;
-  height: 100%;
-  width: 100%;
+td:hover .edit-competitor {
+  visibility: visible;
 }
 
-.event-logo {
-  position: absolute;
-  background: url(<%= asset_path('event-logo.png') %>) no-repeat;
-  background-size: contain;
-  height: 100%;
-  width: 100%;
+td .delete-competitor {
+  visibility: hidden;
 }
 
-.event-text {
-  position: absolute;
-  background: url(<%= asset_path('event-text.png') %>) no-repeat;
-  background-size: contain;
-  height: 100%;
-  width: 100%;
+td:hover .delete-competitor {
+  visibility: visible;
 }
-
-#event-buttons {
-  position: absolute;
-  top: 55%;
-  left: 310px;
-  /*left: 47.5%;*/
-}
-
-#details-button {
-  opacity: 0.8;
-  background: url(<%= asset_path('details-button.png') %>) no-repeat;
-  background-size: cover;
-  display:block;
-  text-indent:-9999em;
-  height : 40px;
-  width: 155px;
-}
-
-/*#details-button:active {*/
-  /*background: url(<%= asset_path('details-button-pressed.png') %>) no-repeat*/
-/*}*/
