--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -70,6 +70,7 @@
   .modal-dialog
     .modal-content
       %form.form-horizontal#competitor-form{:role => 'form'}
+
         .modal-header
           %button.close{:type => 'button', :data => {:dismiss => 'modal'}}
             %span{:aria => {:hidden => 'true'}}
@@ -77,20 +78,24 @@
             %span.sr-only
               Close
           %h4.modal-title#competitor-form-modal-title= ''
+
         .modal-body
+          .form-group.row
+            %span.col-sm-3.control-label= 'Фамилия:'
+            .col-sm-4
+              %input.form-control.competitor-profile-autocomplete#competitor-last-name{:data => {:idField => '#competitor-profile-id', :firstNameField => '#competitor-first-name'}}
+            %span.col-sm-1.control-label= 'Имя:'
+            .col-sm-4
+              %input.form-control#competitor-first-name
+            %input#competitor-profile-id{:type => 'hidden'}
           .form-group
-            %label.col-sm-2.control-label= 'Пилот'
-            .col-sm-10
-              %input.form-control.user-autocomplete#competitor-profile{:placeholder => 'Начните вводить имя или фамилию...', :data => {:idfield => '#competitor-profile-id'}}
-              %input#competitor-profile-id{:type => 'hidden'}
-          .form-group
-            %label.col-sm-2.control-label= 'Костюм'
-            .col-sm-10
-              %input.form-control.wingsuit-autocomplete#competitor-wingsuit{:placeholder => 'Начните вводить название...', :data => {:idfield => '#competitor-wingsuit-id'}}
+            %span.col-sm-3.control-label= 'Костюм:'
+            .col-sm-9
+              %input.form-control.wingsuit-autocomplete#competitor-wingsuit{:placeholder => 'Название модели (Vampire, Jedei, Colugo, Track suit)', :data => {:idfield => '#competitor-wingsuit-id'}}
               %input#competitor-wingsuit-id{:type => 'hidden'}
           .form-group
-            %label.col-sm-2.control-label= 'Класс'
-            .col-sm-10
+            %span.col-sm-3.control-label= 'Класс:'
+            .col-sm-9
               %input.form-control#competitor-class
               %input#competitor-section-id{:type => 'hidden'}
         .modal-footer
