developing new events

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -44,6 +44,10 @@
 @border-radius-small:       1px;
 @nav-pills-border-radius:   4px;
 
+.modal-dialog {
+  z-index: 1041;
+}
+
 #footer {
   background-color: @navbar-default-bg;
   border-top-color: @navbar-default-border;
