--- a/app/assets/stylesheets/events.css.erb
+++ b/app/assets/stylesheets/events.css.erb
@@ -6,22 +6,34 @@
   display: none;
 }
 
-.edit-competitor, .edit-section {
+.edit-competitor, 
+.edit-section 
+{
   margin-left: 10px;
 }
 
-.delete-competitor, .delete-section {
+.section-up,
+.section-down, 
+.pipe-edit-section,
+.delete-competitor, 
+.delete-section {
   margin-left: 5px;
 }
 
 td .edit-section,
 td .edit-competitor,
+td .pipe-edit-section,
+td .section-up,
+td .section-down,
 td .delete-section,
 td .delete-competitor {
   visibility: hidden;
 }
 
 td:hover .edit-section,
+td:hover .pipe-edit-section,
+td:hover .section-up,
+td:hover .section-down,
 td:hover .delete-section,
 td:hover .edit-competitor,
 td:hover .delete-competitor{
