move assets to right folder

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,3 +1,4 @@
+- provide :title, @event.name
 
 - units = {:time => t('units.t_unit'), :distance => t('units.kmh'), :speed => t('units.m')}
 .event-data{:data => {:details => @event.details.to_json.html_safe, :units => units.to_json, :locale => locale}}
