delete unused files, move old to right place

--- a/app/assets/stylesheets/events.css.erb
+++ b/app/assets/stylesheets/events.css.erb
@@ -26,7 +26,8 @@ td .pipe-edit-section,
 td .section-up,
 td .section-down,
 td .delete-section,
-td .delete-competitor {
+td .delete-competitor,
+h1 .edit-event {
   visibility: hidden;
 }
 
@@ -36,6 +37,7 @@ td:hover .section-up,
 td:hover .section-down,
 td:hover .delete-section,
 td:hover .edit-competitor,
-td:hover .delete-competitor{
+td:hover .delete-competitor,
+h1:hover .edit-event {
   visibility: visible;
 }
