--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,143 +1,23 @@
 - provide :title, @event.name
 
 - units = {:time => t('units.t_unit'), :distance => t('units.kmh'), :speed => t('units.m')}
-.event-data{:data => {:details => @event.details.to_json.html_safe, :units => units.to_json, :locale => locale}}
+.event-data{:data => {:details => @event.details.to_json.html_safe, :units => units.to_json, :locale => locale, :can_manage => can?(:update, @event).to_s }}
 
 .container.top-buffer
   .row
     .col-md-12.text-center
       %h1
-        %small
-          %i.fa.fa-fw
         %span#title-competition-name= @event.name
-        %small
-          %a.edit-event{:href => '#'}
-            %i.fa.fa-fw.fa-pencil.text-muted
 
       %h3#title-competition-range= "Соревновательный диапазон: #{@event.range_from} - #{@event.range_to} м"
 
-  .row.top-buffer
-    .col-md-7
-      %button.btn.btn-default#button-add-class
-        %i.fa.fa-plus
-        = 'Класс'
-      %button.btn.btn-default#button-add-competitor
-        %i.fa.fa-plus
-        = 'Участник'
-      %button.btn.btn-default#button-add-round
-        %i.fa.fa-plus
-        = 'Раунд'
-    .col-md-5
-      .pull-right
-        .btn-group{:data => {:toggle => 'buttons'}}
-          %label.btn.btn-default{ :class => ('active' if @event.draft?) }
-            %input#draft{:type => 'radio', :name => 'event-status', :value => 'draft',:autocomplete => 'off'}
-            = 'Черновик'
-          %label.btn.btn-default{ :class => ('active' if @event.published?) }
-            %input#published{:type => 'radio', :name => 'event-status', :value => 'published',:autocomplete => 'off'}
-            = 'Опубликовано'
-          %label.btn.btn-default{ :class => ('active' if @event.finished?) }
-            %input#finished{:type => 'radio', :name => 'event-status', :value => 'finished',:autocomplete => 'off'}
-            = 'Завершено'
+  .row#event-edit-commands
   .row.top-buffer
     .col-md-12
       %table.table.table-bordered#results-table
 
 -# Modals
-
--# Event settings modal
-.modal.fade#event-form-modal{:tabindex => '-1', :role => 'dialog', :aria => {:labelledby => 'myModalLabel', :hidden => 'true'}}
-  .modal-dialog
-    .modal-content
-      %form.form-horizontal#event-form{:action => '#', :role => 'form'}
-        %input#event-id{:type => 'hidden'}
-
-        .modal-header
-          %button.close{:type => 'button', :data => {:dismiss => 'modal'}}
-            %span{:aria => {:hidden => 'true'}}
-              &times;
-            %span.sr-only
-              Close
-          %h4.modal-title#event-form-modal-title= ''
-
-        .modal-body
-          .form-group
-            %span.col-sm-5.control-label= 'Название:'
-            .col-sm-7
-              %input.form-control#event-name
-
-          .form-group.row
-            %span.col-sm-5.control-label= 'Соревонвательный диапазон:'
-            .col-sm-3
-              %input.form-control#range-from
-            %span.col-sm-1.text-center= ' - '
-            .col-sm-3
-              %input.form-control#range-to
-
-        .modal-footer
-          %input.btn.btn-primary#submit-event-form{:data => {:dismiss => 'modal'}, :value => "#{t 'general.save'}"}
-          %button.btn.btn-default{:type => 'button', :data => {:dismiss => 'modal'}}= t 'general.cancel'
-
-
--# Section modal
-
-.modal.fade#section-form-modal{:tabindex => '-1', :role => 'dialog', :aria => {:labelledby => 'myModalLabel', :hidden => 'true'}}
-  .modal-dialog
-    .modal-content
-      %form.form-horizontal#section-form{:action => '#', :role => 'form'}
-        %input#section-id{:type => 'hidden'}
-
-        .modal-header
-          %button.close{:type => 'button', :data => {:dismiss => 'modal'}}
-            %span{:aria => {:hidden => 'true'}}
-              &times;
-            %span.sr-only
-              Close
-          %h4.modal-title#section-form-modal-title= ''
-
-        .modal-body
-          .form-group
-            %span.col-sm-3.control-label= 'Класс:'
-            .col-sm-9
-              %input.form-control#section-name
-
-        .modal-footer
-          %input.btn.btn-primary#submit-section-form{:data => {:dismiss => 'modal'}, :value => "#{t 'general.save'}"}
-          %button.btn.btn-default{:type => 'button', :data => {:dismiss => 'modal'}}= t 'general.cancel'
-
--#Competitor modal
-
-.modal.fade#competitor-form-modal{:tabindex => '-1', :role => 'dialog', :aria => {:labelledby => 'myModalLabel', :hidden => 'true'}}
-  .modal-dialog
-    .modal-content
-      %form.form-horizontal#competitor-form{:role => 'form'}
-        %input#competitor-id{:type => 'hidden'}
-        .modal-header
-          %button.close{:type => 'button', :data => {:dismiss => 'modal'}}
-            %span{:aria => {:hidden => 'true'}}
-              &times;
-            %span.sr-only
-              Close
-          %h4.modal-title#competitor-form-modal-title= ''
-
-        .modal-body
-          .form-group.row
-            %span.col-sm-3.control-label= 'Фамилия:'
-            .col-sm-4
-              %input.form-control.competitor-profile-autocomplete#competitor-last-name{:data => {:idField => '#competitor-profile-id', :firstNameField => '#competitor-first-name'}}
-            %span.col-sm-1.control-label= 'Имя:'
-            .col-sm-4
-              %input.form-control#competitor-first-name
-            %input#competitor-profile-id{:type => 'hidden'}
-          .form-group
-            %span.col-sm-3.control-label= 'Костюм:'
-            .col-sm-9
-              %input.form-control.wingsuit-autocomplete#competitor-wingsuit{:placeholder => 'Название модели (Vampire, Jedei, Colugo, Track suit)', :data => {:idfield => '#competitor-wingsuit-id'}}
-              %input#competitor-wingsuit-id{:type => 'hidden'}
-          .form-group
-            %span.col-sm-3.control-label= 'Класс:'
-            .col-sm-9
-              %select.form-control#competitor-section
-        .modal-footer
-          %input.btn.btn-primary#submit-competitor-form{:data => {:dismiss => 'modal'}, :value => "#{t 'general.save'}"}
-          %button.btn.btn-default{:type => 'button', :data => {:dismiss => 'modal'}}= t 'general.cancel'
+= event_settings_modal
+= section_modal
+= competitor_modal
+= result_modal
